# a2ui-demo

./: .gitignore  AGENTS.md  README.md  SPEC.md
.agents/skills/design-taste-frontend/: SKILL.md
backend/: main.py  pyproject.toml
backend/a2ui/: __init__.py  parser.py  schema_manager.py
backend/a2ui_utils/: __init__.py  parser.py  schema_manager.py
backend/agent/: __init__.py  graph.py  metrics.py  prompts.py  tools.py
docs/: A2A_CONCRETE_EXAMPLE.md  AGUI_CONCRETE_EXAMPLE.md  TRANSPORT_COMPARISON.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/course/[id]/: page.tsx
frontend/src/components/a2ui/: A2UIChat.tsx  CourseCard.tsx  overrides.tsx
frontend/src/components/a2ui/chat/: ChatHeader.tsx  ChatInput.tsx  EmptyState.tsx  MessageBubbles.tsx  index.ts
frontend/src/hooks/: useA2UIProcessor.ts  useChatStream.ts
frontend/src/lib/: a2ui-catalog.ts  a2ui-catalog.tsx  sse-client.ts
openspec/: config.yaml
openspec/changes/initial-implementation/: design.md  proposal.md  tasks.md
openspec/changes/initial-implementation/specs/a2ui-schema/: spec.md
openspec/specs/a2ui-schema/: spec.md
openspec/specs/backend-setup/: spec.md
openspec/specs/fastapi-server/: spec.md
openspec/specs/frontend-catalog/: spec.md
openspec/specs/frontend-chat/: spec.md
openspec/specs/frontend-setup/: spec.md
openspec/specs/langgraph-agent/: spec.md
openspec/specs/sse-client/: spec.md
(+7 files in other folders)
