[project]
name = "a2ui-demo-backend"
version = "0.1.0"
description = "A2UI Demo - Course Catalog Agent Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "a2ui-agent-sdk>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["a2ui_utils", "agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
